# native-dialog-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  flake.nix
.github/workflows/: rust.yml
examples/: mac_threads.rs  main.rs  open_dir.rs  progress.rs  tour.rs
examples/async_modal/: Cargo.toml
examples/async_modal/src/: main.rs
examples/gallery/: Cargo.toml
examples/gallery/src/: filters.yml  main.rs  msg_alert.rs  msg_confirm.rs  open_dir.rs  open_multi.rs  open_single.rs  save_single.rs  settings.rs  utils.rs
examples/modal_dialog/: Cargo.toml
examples/modal_dialog/src/: main.rs
examples/windows_features/: Cargo.toml
examples/windows_features/src/: main.rs
examples/windows_manifest/: Cargo.toml  build.rs  fuck_ms-manifest.rc  fuck_ms.exe.manifest  manifest.xml  program.rc
examples/windows_manifest/src/: main.rs
src/: errors.rs  file.rs  lib.rs  message.rs  progress.rs  tests.rs  util.rs
src/builder/: file.rs  message.rs  mod.rs
src/dialog/: file.rs  filter.rs  message.rs  mod.rs  progress.rs
src/dialog/gnu/: backend.rs  file.rs  message.rs  mod.rs  version.rs
src/dialog/mac/: file.rs  message.rs  mod.rs
src/dialog/mac/ffi/: alert.rs  mod.rs  open_panel.rs  open_panel_async.rs  save_panel.rs  save_panel_async.rs  save_panel_filters.rs  stack_view.rs  text_field.rs  window.rs
src/dialog/win/: file.rs  message.rs  mod.rs
src/dialog_impl/: mod.rs
src/dialog_impl/gnu/: file.rs  message.rs  mod.rs  progress.rs  version.rs
src/dialog_impl/mac/: file.rs  message.rs
src/dialog_impl/mac/ffi/: dropdown_action.rs  mod.rs  open_panel.rs  pop_up_button.rs  save_panel.rs  save_panel_filters.rs  stack_view.rs  text_field.rs  url.rs  user_notification.rs  window.rs
src/dialog_impl/mac/ffi/cocoa/: alert.rs  bundle.rs  color.rs  image.rs  layout.rs  mod.rs  open_panel.rs  panel.rs  pop_up_button.rs  save_panel.rs  stack_view.rs  text_field.rs  url.rs  ut_type.rs  view.rs  window.rs
src/dialog_impl/sdl/: message.rs  mod.rs
src/dialog_impl/win/: file.rs  message.rs  mod.rs  progress.rs
src/ffi/: mod.rs
src/ffi/mac/: alert.rs  alert_async.rs  app.rs  bundle.rs  color.rs  future.rs  image.rs  mod.rs  open_panel.rs  open_panel_async.rs  open_panel_delegate.rs  pop_up_button.rs  save_panel.rs  save_panel_async.rs  save_panel_delegate.rs  text_field.rs  url.rs  user_notification.rs  window.rs
src/ffi/win/: activation.rs  mod.rs
src/impl/: mod.rs
src/impl/gnu/: file.rs  message.rs  mod.rs
src/impl/mac/: file.rs  message.rs  mod.rs
src/impl/mac/ffi/: alert.rs  image.rs
src/impl/win/: file.rs  message.rs  mod.rs
src/utils/: mod.rs  tilde.rs  window.rs
