[package]
name = "native-dialog"
version = "0.7.0"
authors = ["balthild <ibalthild@gmail.com>"]
edition = "2021"
description = "A library to display dialogs. Supports GNU/Linux, BSD Unix, macOS and Windows."
license = "MIT"
documentation = "https://docs.rs/native-dialog"
repository = "https://github.com/balthild/native-dialog-rs"

[dependencies]
dirs = "6.0.0"
raw-window-handle = "0.5.0"
thiserror = "1.0.19"
futures-lite = { version = "2.6.0", optional = true }
futures-channel = { version = "0.3.31", optional = true }
formatx = "0.2.3"

[target.'cfg(target_os = "windows")'.dependencies]
wfd = "0.1.7"
winapi = { version = "0.3", features = ["winuser"] }
once_cell = { version = "1.4.0", optional = true }

[target.'cfg(all(unix, not(target_os = "macos"), not(target_os = "ios"), not(target_os = "android")))'.dependencies]
which = "4.0.0"
ascii = "1.1.0"
versions = "5.0.1"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.0"
objc2 = "0.6.0"
objc2-foundation = "0.3.0"
objc2-app-kit = { version = "0.3.0", features = [
    "objc2-uniform-type-identifiers",
] }
objc2-uniform-type-identifiers = "0.3.0"
core-foundation = "0.9.3"
once_cell = "1.4.0"

[features]
async = ["dep:futures-lite", "dep:futures-channel"]
windows_dpi_awareness = []
windows_visual_styles = [
    "once_cell",
    "winapi/sysinfoapi",
    "winapi/winbase",
    "winapi/handleapi",
    "winapi/libloaderapi",
]

[workspace]
members = [
    "examples/windows_manifest",
    "examples/windows_features",
    "examples/modal_dialog",
]
